LightsOutにUIとCUIを作成

--- a/c++/LightsOut/src/CMakeLists.txt
+++ b/c++/LightsOut/src/CMakeLists.txt
@@ -3,9 +3,16 @@ add_library(LightsOutSys STATIC LightsOutSys.cpp)
 
 target_include_directories(LightsOutSys PRIVATE ${PROJECT_SOURCE_DIR}/include)
 
+# LightsOutCUI
+add_library(LightsOutCUI STATIC LightsOutCUI.cpp)
+
+target_link_libraries(LightsOutCUI LightsOutSys)
+
+target_include_directories(LightsOutCUI PRIVATE ${PROJECT_SOURCE_DIR}/include)
+
 # LightsOut
 add_executable(LightsOut LightsOut.cpp)
 
-target_link_libraries(LightsOut LightsOutSys)
+target_link_libraries(LightsOut LightsOutCUI)
 
 target_include_directories(LightsOut PRIVATE ${PROJECT_SOURCE_DIR}/include)
