--- a/c++/LightsOut/makefile
+++ b/c++/LightsOut/makefile
@@ -1,6 +1,11 @@
-.PHONY : build
-build :
-	cmake -GNinja -S . -B build
+.PHONY : build_cui
+build_cui :
+	cmake -GNinja -S . -B build -D UI_MODE=CUI
+	cmake --build build
+
+.PHONY : build_wx
+build_wx :
+	cmake -GNinja -S . -B build -D UI_MODE=WX_WIDGETS
 	cmake --build build
 
 .PHONY : run
