MinesweeperSysをファイルに独立

--- a/c++/Minesweeper/src/CMakeLists.txt
+++ b/c++/Minesweeper/src/CMakeLists.txt
@@ -1,1 +1,10 @@
+add_library(MinesweeperSys STATIC MinesweeperSys.cpp)
+
+target_include_directories(MinesweeperSys PRIVATE ${PROJECT_SOURCE_DIR}/include)
+
+
 add_executable(Minesweeper Minesweeper.cpp)
+
+target_link_libraries(Minesweeper MinesweeperSys)
+
+target_include_directories(Minesweeper PRIVATE ${PROJECT_SOURCE_DIR}/include)
