--- a/c++/Minesweeper/src/CMakeLists.txt
+++ b/c++/Minesweeper/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 # MinesweeperSys
-add_library(MinesweeperSys STATIC MinesweeperSys.cpp)
+add_library(MinesweeperSys STATIC MinesweeperSys.cpp MinesweeperCell.cpp)
 
 target_include_directories(MinesweeperSys PRIVATE ${PROJECT_SOURCE_DIR}/include)
 
