<c++/SlidePuzzle>SlidePuzzleSysクラスで長さと盤面を管理

--- a/c++/SlidePuzzle/src/CMakeLists.txt
+++ b/c++/SlidePuzzle/src/CMakeLists.txt
@@ -1,1 +1,6 @@
-add_Executable(SlidePuzzle SlidePuzzle.cpp)
+add_library(SlidePuzzleSys STATIC SlidePuzzleSys.cpp)
+target_include_directories(SlidePuzzleSys PRIVATE ${PROJECT_SOURCE_DIR}/include)
+
+add_executable(SlidePuzzle SlidePuzzle.cpp)
+target_link_libraries(SlidePuzzle SlidePuzzleSys)
+target_include_directories(SlidePuzzle PRIVATE ${PROJECT_SOURCE_DIR}/include)
