--- a/website/package.json
+++ b/website/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "bash ./update_components.sh && next build",
     "start": "next start",
     "lint": "next lint",
     "update_components": "bash ./update_components.sh"
