<website_release>コンポーネントを最新のものに更新

--- a/website/.gitignore
+++ b/website/.gitignore
@@ -35,5 +35,5 @@ yarn-error.log*
 next-env.d.ts
 
 # gawsel Next.js project node_modules
-/src/components/*
+!/src/components/*
 !/src/components/website
